Доработано распределение ответственности по слоям